feat(core): Importing applicants from web integration
